--- a/factorial_model.ipynb
+++ b/factorial_model.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Causal Inference with Factorial Design"
+    "## Causal Inference with Factorial Design\n",
+    "\n",
+    "### **Objective:** Provide accurate and scalable model to solve the causal clustering problem"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -28,13 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import statsmodels.api as sm\n",
-    "from sklearn import preprocessing"
+    "from sklearn import preprocessing\n",
+    "from itertools import combinations"
    ]
   },
   {
@@ -46,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,12 +107,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Initialize model parameters (betas)"
+    "### Initialize model parameters\n",
+    "\n",
+    "$\\beta_{1:k} \\sim \\mathcal{N}(0, 1)$, with uniform random sparsity imposed on all parameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,8 +135,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For `degree=3` and `interaction_only=True`, the parameters appear in the following order: [bias, $\\beta_{t_1}$, $\\beta_{t_2}$, $\\beta_{t_3}$, $\\beta_{t_1, t_2}$, $\\beta_{t_1, t_3}$, $\\beta_{t_2, t_3}$, $\\beta_{t_1, t_2, t_3}$]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -151,19 +163,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For `degree=3` and `interaction_only=True`, the parameters appear in the following order: [bias, $\\beta_{t_1}$, $\\beta_{t_2}$, $\\beta_{t_3}$, $\\beta_{t_1, t_2}$, $\\beta_{t_1, t_3}$, $\\beta_{t_2, t_3}$, $\\beta_{t_1, t_2, t_3}$]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create a sample dataset"
+    "### Create a sample dataset\n",
+    "\n",
+    "$t \\sim Bern(p_t=0.5)$; $T = t_{\\text{expanded}}$\n",
+    "\n",
+    "$y = \\mu + \\epsilon$, where $\\mu = T \\cdot \\beta_{1:k}$ and $\\epsilon \\sim \\mathcal{N}(0, \\sigma)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +184,7 @@
     }
    ],
    "source": [
-    "t, y = fm.sample(seed=23)\n",
+    "t, y = fm.sample(seed=0)\n",
     "print(t.shape, y.shape)"
    ]
   },
@@ -188,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -217,31 +226,31 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                      y   R-squared:                       0.994\n",
-      "Model:                            OLS   Adj. R-squared:                  0.994\n",
-      "Method:                 Least Squares   F-statistic:                 2.245e+04\n",
-      "Date:                Fri, 23 Feb 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        20:24:35   Log-Likelihood:                 887.06\n",
-      "No. Observations:                1000   AIC:                            -1758.\n",
-      "Df Residuals:                     992   BIC:                            -1719.\n",
+      "Dep. Variable:                      y   R-squared:                       0.993\n",
+      "Model:                            OLS   Adj. R-squared:                  0.993\n",
+      "Method:                 Least Squares   F-statistic:                 2.093e+04\n",
+      "Date:                Tue, 27 Feb 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        08:32:09   Log-Likelihood:                 881.00\n",
+      "No. Observations:                1000   AIC:                            -1746.\n",
+      "Df Residuals:                     992   BIC:                            -1707.\n",
       "Df Model:                           7                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================\n",
       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
       "------------------------------------------------------------------------------\n",
-      "const          0.0141      0.009      1.492      0.136      -0.004       0.033\n",
-      "x1            -1.0622      0.013    -82.488      0.000      -1.087      -1.037\n",
-      "x2            -0.0079      0.013     -0.601      0.548      -0.034       0.018\n",
-      "x3            -0.0155      0.013     -1.201      0.230      -0.041       0.010\n",
-      "x4            -1.9316      0.018   -106.118      0.000      -1.967      -1.896\n",
-      "x5             0.0298      0.018      1.688      0.092      -0.005       0.064\n",
-      "x6             0.1542      0.018      8.399      0.000       0.118       0.190\n",
-      "x7            -0.3478      0.025    -13.693      0.000      -0.398      -0.298\n",
+      "const          0.0085      0.009      0.964      0.335      -0.009       0.026\n",
+      "x1            -1.0455      0.013    -81.708      0.000      -1.071      -1.020\n",
+      "x2            -0.0041      0.012     -0.327      0.744      -0.029       0.020\n",
+      "x3             0.0047      0.013      0.359      0.719      -0.021       0.030\n",
+      "x4            -1.9355      0.018   -107.599      0.000      -1.971      -1.900\n",
+      "x5            -0.0082      0.018     -0.456      0.649      -0.043       0.027\n",
+      "x6             0.1175      0.018      6.602      0.000       0.083       0.152\n",
+      "x7            -0.3124      0.026    -12.170      0.000      -0.363      -0.262\n",
       "==============================================================================\n",
-      "Omnibus:                        0.769   Durbin-Watson:                   1.970\n",
-      "Prob(Omnibus):                  0.681   Jarque-Bera (JB):                0.640\n",
-      "Skew:                           0.033   Prob(JB):                        0.726\n",
-      "Kurtosis:                       3.105   Cond. No.                         18.3\n",
+      "Omnibus:                        1.542   Durbin-Watson:                   1.996\n",
+      "Prob(Omnibus):                  0.463   Jarque-Bera (JB):                1.618\n",
+      "Skew:                           0.086   Prob(JB):                        0.445\n",
+      "Kurtosis:                       2.903   Cond. No.                         17.5\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -253,6 +262,112 @@
     "m = sm.OLS(y, T)\n",
     "results = m.fit()\n",
     "print(results.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Average Marginal Interaction Effect (AMIE)\n",
+    "\n",
+    "[Egami & Imai, 2018](https://www.tandfonline.com/doi/10.1080/01621459.2018.1476246)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "AMIE can be expressed as:\n",
+    "\n",
+    "$$\\pi_{1:K}(\\mathbf{t}^{1:K};\\mathbf{t}_0^{1:K}) = \\tau_{1:K}(\\mathbf{t}^{1:K};\\mathbf{t}_0^{1:K}) - \\sum_{k=1}^{K-1}\\sum_{\\mathcal{K}_k \\in \\mathcal{K}_K} \\pi_{\\mathcal{K}_k}(\\mathbf{t}^{\\mathcal{K}_k};\\mathbf{t}_0^{\\mathcal{K}_k})$$\n",
+    "\n",
+    "where $\\tau = $ average combination effect (ACE) \n",
+    "\n",
+    "$$\\tau_{1:K}(\\mathbf{t}^{1:K};\\mathbf{t}_0^{1:K}) = \\mathbb{E}\\biggl[\\int \\Bigl\\{Y_i(\\mathbf{T}_i^{1:K} = \\mathbf{t}^{1:K}, \\mathbf{T}_i^{(K+1):J}) - Y_i(\\mathbf{T}_i^{1:K} = \\mathbf{t}_0^{1:K}, \\mathbf{T}_i^{(K+1):J})\\Bigr\\} dF(\\mathbf{T}_i^{(K+1):J}\\biggr]$$\n",
+    "\n",
+    "where $J$ is the total number of treatments and $K$ is the number of treatments of interest. Note that without loss of generality, we assume the first $K \\leq J$ treatments as those of interest."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "J = k   # number of treatments\n",
+    "K = 2   # number of treatments of interest\n",
+    "assert(K <= J & K >= 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute average combination effect (ACE)\n",
+    "def average_combination_effect(y, t, K_indices):\n",
+    "    combo_idx = np.where(np.all(t[:, K_indices] == 1, axis=1))[0]\n",
+    "    control_idx = np.where(np.all(t[:, K_indices] == 0, axis=1))[0]\n",
+    "    ACE = np.mean(y[combo_idx]) - np.mean(y[control_idx])\n",
+    "    return ACE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Helper function to compute average marginal effect (AME). Only for base case when K=2.\n",
+    "def average_marginal_effect(t_a, t_b):\n",
+    "    a1_b1_idx = np.where((t[:, t_a] == 1) & (t[:, t_b] == 1))[0]\n",
+    "    a1_b0_idx = np.where((t[:, t_a] == 1) & (t[:, t_b] == 0))[0]\n",
+    "    a0_b1_idx = np.where((t[:, t_a] == 0) & (t[:, t_b] == 1))[0]\n",
+    "    a0_b0_idx = np.where((t[:, t_a] == 0) & (t[:, t_b] == 0))[0]\n",
+    "    AME = np.mean(y[a1_b1_idx]) - np.mean(y[a0_b1_idx]) + np.mean(y[a1_b0_idx]) - np.mean(y[a0_b0_idx])\n",
+    "    return AME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Recursive function for computing average marginal interaction effect (AMIE)\n",
+    "def average_marginal_interaction_effect(y, t, K_indices):\n",
+    "    # Base case\n",
+    "    if len(K_indices) == 2:\n",
+    "        return average_combination_effect(y, t, K_indices) - average_marginal_effect(K_indices[0], K_indices[1])\n",
+    "    \n",
+    "    # Recursive case\n",
+    "    AMIE = average_combination_effect(y, t, K_indices)\n",
+    "    for k in range(2, len(K_indices)):\n",
+    "        subsets = list(combinations(K_indices, k))\n",
+    "        for subset in subsets:\n",
+    "            AMIE -= average_marginal_interaction_effect(y, t, subset)\n",
+    "    return AMIE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.1064595750620718"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_marginal_interaction_effect(y, t, [0, 1])"
    ]
   },
   {
