Added summary data table

--- a/factorial_model.ipynb
+++ b/factorial_model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -30,14 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import statsmodels.api as sm\n",
     "from sklearn import preprocessing\n",
-    "from itertools import combinations"
+    "from itertools import combinations\n",
+    "from tabulate import tabulate"
    ]
   },
   {
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -165,14 +166,14 @@
    "source": [
     "### Create a sample dataset\n",
     "\n",
-    "$t \\sim Bern(p_t=0.5)$; $T = t_{\\text{expanded}}$\n",
+    "**Treatment matrix:** $t_{n,k} \\sim Bern(p_t=0.5)$; $T = t_{\\text{expanded}}$\n",
     "\n",
-    "$y = \\mu + \\epsilon$, where $\\mu = T \\cdot \\beta_{1:k}$ and $\\epsilon \\sim \\mathcal{N}(0, \\sigma)$"
+    "**Outcomes (for k=3):** $y_i = \\beta_{i,0} + \\beta_{i,1} t_{i,1} + \\beta_{i,2} t_{i,2} + \\beta_{i,3} t_{i,3} + \\beta_{i,12} t_{i,12} + \\beta_{i,13} t_{i,13} + \\beta_{i,23} t_{i,23} + \\beta_{i,123} t_{i,123} + \\epsilon$ where $\\epsilon \\sim \\mathcal{N}(0, \\sigma)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +231,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.993\n",
       "Method:                 Least Squares   F-statistic:                 2.093e+04\n",
       "Date:                Tue, 27 Feb 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        08:32:09   Log-Likelihood:                 881.00\n",
+      "Time:                        11:00:44   Log-Likelihood:                 881.00\n",
       "No. Observations:                1000   AIC:                            -1746.\n",
       "Df Residuals:                     992   BIC:                            -1707.\n",
       "Df Model:                           7                                         \n",
@@ -290,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -361,13 +362,58 @@
        "1.1064595750620718"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "average_marginal_interaction_effect(y, t, [0, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "treatment combos      true betas    predicted betas       AMIE\n",
+      "------------------  ------------  -----------------  ---------\n",
+      "()                      0                0.00854169   0\n",
+      "(0,)                   -1.03998         -1.04548     -1.98994\n",
+      "(1,)                    0               -0.00407739  -0.7829\n",
+      "(2,)                    0                0.00466065   0.083422\n",
+      "(0, 1)                 -1.95104         -1.93547      1.10646\n",
+      "(0, 2)                  0               -0.00817732   2.09497\n",
+      "(1, 2)                  0.12784          0.117534     0.843058\n",
+      "(0, 1, 2)              -0.316243        -0.312447    -7.22794\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Table that enumerates the treatment combinations (t), the true beta for each combination (fm.beta), the predicted\n",
+    "# beta for each combination (results), and the AMIE for each combination.\n",
+    "t_combos = []\n",
+    "for i in range(k+1):\n",
+    "    t_combos += list(combinations(range(k), i))\n",
+    "\n",
+    "table = []\n",
+    "for i in range(len(t_combos)):\n",
+    "    beta = fm.beta[i]\n",
+    "    pred = results.params[i]\n",
+    "    amie_combos = np.array([average_marginal_interaction_effect(y, t, t_combos[i])])\n",
+    "    table.append([t_combos[i], beta, pred, amie_combos])\n",
+    "print(tabulate(table, headers=[\"treatment combos\", \"true betas\", \"predicted betas\", \"AMIE\"]))"
    ]
   },
   {
