--- a/factorial_model.ipynb
+++ b/factorial_model.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -30,78 +30,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import statsmodels.api as sm\n",
+    "import class_FM as FM\n",
     "from sklearn import preprocessing\n",
     "from itertools import combinations\n",
     "from tabulate import tabulate"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Set up FactorialModel class"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class FactorialModel(object):\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        n,\n",
-    "        p_t=0.5,\n",
-    "        k=2,\n",
-    "        degree=2,\n",
-    "        sigma=0.1,\n",
-    "        sparsity=0.5,\n",
-    "        beta_seed=42,\n",
-    "    ) -> None:\n",
-    "        self.n = n\n",
-    "        self.p_t = p_t\n",
-    "        self.k = k\n",
-    "        self.degree = degree\n",
-    "        self.sigma = sigma\n",
-    "        self.sparsity = sparsity\n",
-    "        self.beta_seed = beta_seed\n",
-    "        # initialize beta random number generator\n",
-    "        self.rng_beta = np.random.default_rng(self.beta_seed)\n",
-    "        # initialize interaction expansion transformation\n",
-    "        self.xfm = preprocessing.PolynomialFeatures(\n",
-    "            degree=self.degree, interaction_only=True, include_bias=True\n",
-    "        )\n",
-    "        _ = self.xfm.fit_transform(np.zeros((1, self.k), dtype=\"float32\"))\n",
-    "        # sample ground truth betas\n",
-    "        self.beta = self.rng_beta.normal(0, 1, self.xfm.n_output_features_).astype(\n",
-    "            \"float32\"\n",
-    "        )\n",
-    "        zero_indices = self.rng_beta.choice(\n",
-    "            self.xfm.n_output_features_,\n",
-    "            size=int(self.xfm.n_output_features_ * self.sparsity),\n",
-    "            replace=False,\n",
-    "        )\n",
-    "        self.beta[zero_indices] = 0.0\n",
-    "\n",
-    "    def sample(self, seed=None):\n",
-    "        self.rng = np.random.default_rng(seed)\n",
-    "        # sample treatment array\n",
-    "        t = self.rng.binomial(1, self.p_t, (self.n, self.k)).astype(\"float32\")\n",
-    "        # expand treatment array\n",
-    "        T = self.xfm.fit_transform(t)\n",
-    "        # build response surface\n",
-    "        self.mu = T @ self.beta\n",
-    "        # sample outcome\n",
-    "        self.eps = self.rng.normal(0, self.sigma, size=self.n)\n",
-    "        y = self.mu + self.eps\n",
-    "        return t, y"
    ]
   },
   {
@@ -115,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +63,7 @@
     "sigma = 0.1\n",
     "sparsity = 0.5\n",
     "\n",
-    "fm = FactorialModel(\n",
+    "fm = FM.FactorialModel(\n",
     "    n=n,\n",
     "    k=k,\n",
     "    degree=degree,\n",
@@ -144,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -230,8 +168,8 @@
       "Dep. Variable:                      y   R-squared:                       0.993\n",
       "Model:                            OLS   Adj. R-squared:                  0.993\n",
       "Method:                 Least Squares   F-statistic:                 2.093e+04\n",
-      "Date:                Tue, 27 Feb 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        11:00:44   Log-Likelihood:                 881.00\n",
+      "Date:                Sun, 17 Mar 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        22:58:51   Log-Likelihood:                 881.00\n",
       "No. Observations:                1000   AIC:                            -1746.\n",
       "Df Residuals:                     992   BIC:                            -1707.\n",
       "Df Model:                           7                                         \n",
@@ -291,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +300,7 @@
        "1.1064595750620718"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -380,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
