--- a/causalANOVA.ipynb
+++ b/causalANOVA.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -19,12 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "import statsmodels.api as sm\n",
     "import class_FM as FM\n",
     "import rpy2.robjects as ro\n",
@@ -37,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +132,7 @@
       "\n",
       "R[write to console]: \n",
       "R[write to console]: The downloaded source packages are in\n",
-      "\t‘/private/var/folders/pg/dtpn_hn11nd280g5vwz2x3_r0000gn/T/RtmpU1CmHI/downloaded_packages’\n",
+      "\t‘/private/var/folders/pg/dtpn_hn11nd280g5vwz2x3_r0000gn/T/RtmpaWSNXT/downloaded_packages’\n",
       "R[write to console]: \n",
       "R[write to console]: \n",
       "\n",
@@ -152,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -194,8 +204,8 @@
       "Dep. Variable:                      y   R-squared:                       0.993\n",
       "Model:                            OLS   Adj. R-squared:                  0.993\n",
       "Method:                 Least Squares   F-statistic:                 2.093e+04\n",
-      "Date:                Tue, 19 Mar 2024   Prob (F-statistic):               0.00\n",
-      "Time:                        21:54:13   Log-Likelihood:                 881.00\n",
+      "Date:                Mon, 25 Mar 2024   Prob (F-statistic):               0.00\n",
+      "Time:                        00:05:11   Log-Likelihood:                 881.00\n",
       "No. Observations:                1000   AIC:                            -1746.\n",
       "Df Residuals:                     992   BIC:                            -1707.\n",
       "Df Model:                           7                                         \n",
@@ -224,9 +234,10 @@
     }
    ],
    "source": [
-    "T = preprocessing.PolynomialFeatures(\n",
+    "pf = preprocessing.PolynomialFeatures(\n",
     "    degree=degree, interaction_only=True, include_bias=True,\n",
-    ").fit_transform(t)\n",
+    ")\n",
+    "T = pf.fit_transform(t)\n",
     "m = sm.OLS(y, T)\n",
     "results = m.fit()\n",
     "print(results.summary())"
@@ -236,12 +247,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fit CausalANOVA model with sample dataset"
+    "### Fit CausalANOVA model with sample data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +270,7 @@
       " \n",
       "Model:\n",
       " outcome ~ . * . * .\n",
-      "<environment: 0x17290d7e8>\n",
+      "<environment: 0x17e83ea58>\n",
       "******\n",
       "Range:\n",
       "******\n",
@@ -391,6 +402,44 @@
     "\"\"\"\n",
     ")\n",
     "print(ro.r(\"summary(fit)\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Compute expected outcomes from OLS model betas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute expected outcomes as linear combination of betas\n",
+    "betas = results.params\n",
+    "exp_outcomes = pf.powers_.T @ betas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3.30157354, -2.13446375, -0.19843024])"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp_outcomes"
    ]
   },
   {
