--- a/lasso_josh.ipynb
+++ b/lasso_josh.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +43,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.231665    0.26711896 -0.00692612  0.5015353  -1.3267283   1.1077682\n",
+      "  0.09375488 -1.1708181 ]\n"
+     ]
+    }
+   ],
    "source": [
     "n = 10000\n",
     "k = 3\n",
@@ -69,8 +69,9 @@
     "    sigma=sigma,\n",
     "    sparsity=sparsity,\n",
     "    beta_seed=41,\n",
+    "    # heredity = True\n",
     ")\n",
-    "t, y = fm.sample(seed=0)\n"
+    "t, y = fm.sample(seed=42)\n"
    ]
   },
   {
@@ -83,21 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.001\n",
-      "[ 0.          0.24593838  0.          0.         -0.          1.0920634\n",
-      "  0.06200721 -1.1047195 ]\n",
-      "[ 0.          0.26711896  0.          0.          0.          1.1077682\n",
-      "  0.09375488 -1.1708181 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pf = preprocessing.PolynomialFeatures(\n",
     "    degree=degree, interaction_only=True, include_bias=True,\n",
@@ -119,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -156,6 +145,8 @@
      "text": [
       "[ 0.          0.21244785 -0.          0.         -0.          0.95178205\n",
       " -0.         -0.83001375]\n",
+      "[ 0.          0.26711896  0.          0.          0.          1.1077682\n",
+      "  0.09375488 -1.1708181 ]\n",
       "[[1. 0. 0. 0. 0. 0. 0. 0.]\n",
       " [1. 1. 0. 0. 0. 0. 0. 0.]\n",
       " [1. 0. 1. 0. 0. 0. 0. 0.]\n",
@@ -172,6 +163,7 @@
    "source": [
     "betas = model.coef_\n",
     "print(betas)\n",
+    "print(fm.beta)\n",
     "beta_mask = pf.transform(pf.powers_)\n",
     "print(beta_mask)\n",
     "expected_outcomes = beta_mask @ betas\n",
@@ -187,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -245,23 +237,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 226.62528202932663\n",
-      "[0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      "2 69.98290663726938\n",
-      "[0 0 1 1 0 0 0 0 1 1 1 1 0 0 1 0]\n",
-      "3 44.821749973392706\n",
-      "[0 0 1 1 0 0 0 0 2 1 1 1 0 0 2 0]\n",
-      "4 12.365039650272358\n",
-      "[3 0 1 1 3 3 3 0 2 1 1 1 0 3 2 3]\n",
-      "5 9.027676808735215\n",
-      "[3 4 1 1 3 3 3 4 2 1 1 1 0 3 2 3]\n"
+      "For 1 Clusters, MSE:2395.6175204714277\n",
+      "Clusters for each combination: [0 0 0 0 0 0 0 0]\n",
+      "For 2 Clusters, MSE:1340.7963565696423\n",
+      "Clusters for each combination: [1 1 1 1 0 1 1 0]\n",
+      "For 3 Clusters, MSE:950.1499386037523\n",
+      "Clusters for each combination: [2 2 2 1 0 1 1 2]\n",
+      "For 4 Clusters, MSE:914.5250187380684\n",
+      "Clusters for each combination: [2 2 2 3 0 3 1 2]\n",
+      "For 5 Clusters, MSE:800.4637383440012\n",
+      "Clusters for each combination: [2 2 2 3 0 3 1 4]\n"
      ]
     }
    ],
@@ -290,8 +282,8 @@
     "            eo_train[k] = np.mean(y_train[clusters_train==k])\n",
     "        for key,value in cluster_dict.items():\n",
     "            combo_dict[value] += np.sum((y_test[dec_test==key] - eo_train[value])**2)\n",
-    "        print(i, sum(combo_dict.values()))\n",
-    "        print(kmeans.labels_)\n",
+    "        print(\"For {} Clusters, MSE:{}\".format(i,sum(combo_dict.values())))\n",
+    "        print(\"Clusters for each combination: {}\".format(kmeans.labels_))\n",
     "cross_val_kmeans(T_train, T_test,y_train, y_test,expected_outcomes, beta_mask,5)"
    ]
   },
