started loop for generating data

--- a/lasso.ipynb
+++ b/lasso.ipynb
@@ -721,9 +721,37 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Generate data for m less than sp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#s = sparsity * 2^k\n",
+    "#if k is 10: 1024 * 0.5 = 512\n",
+    "for n in range(1, 10000, 20):\n",
+    "    k = 10\n",
+    "    degree = 3\n",
+    "    sigma = 0.1\n",
+    "    sparsity = 0.5\n",
+    "\n",
+    "    fm = FM.FactorialModel(\n",
+    "        n=n,\n",
+    "        k=k,\n",
+    "        degree=degree,\n",
+    "        sigma=sigma,\n",
+    "        sparsity=sparsity,\n",
+    "        beta_seed=42,\n",
+    "    )\n",
+    "    t, y = fm.sample(seed=0)"
+   ]
   }
  ],
  "metadata": {
