Added lakisha data

--- a/lasso.ipynb
+++ b/lasso.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import statsmodels.api as sm\n",
-    "import class_FM_QC as FM\n",
+    "import class_FM as FM\n",
     "from sklearn import preprocessing\n",
     "from sklearn.linear_model import Lasso, LassoCV\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,10 +83,10 @@
      "output_type": "stream",
      "text": [
       "alpha=0.001\n",
-      "betas=[ 0.         -1.039072    0.          0.00287061 -1.94102    -0.00826316\n",
-      "  0.10200795 -0.2885483 ]\n",
-      "Mean Squared Error of y: 0.010162831604398266\n",
-      "Mean Squared Error of beta: 0.00020149318152107298\n"
+      "betas=[ 0.         -0.4637746   0.          0.00316037 -0.8622292  -0.00868518\n",
+      "  0.03107943 -0.11330536]\n",
+      "Mean Squared Error of y: 0.0101635675576649\n",
+      "Mean Squared Error of beta: 0.00020646692428272218\n"
      ]
     }
    ],
@@ -109,6 +109,52 @@
     "beta_hat = model.coef_\n",
     "mse_beta = mean_squared_error(beta_actual, beta_hat)\n",
     "print(f\"Mean Squared Error of beta: {mse_beta}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 1.],\n",
+       "       [1., 1., 1.],\n",
+       "       ...,\n",
+       "       [0., 1., 0.],\n",
+       "       [1., 0., 1.],\n",
+       "       [0., 0., 0.]], dtype=float32)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 0., 0., 0., 0., 0., 0.], dtype=float32)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "T[0]"
    ]
   },
   {
@@ -1365,7 +1411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.12.2"
   },
   "vscode": {
    "interpreter": {
