fixed forward selection

--- a/carlson_notebook.ipynb
+++ b/carlson_notebook.ipynb
@@ -821,6 +821,175 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def forward_selection(X, y, p_value):\n",
+    "    kept_features = []\n",
+    "    total_features = X.columns.tolist()\n",
+    "    print(total_features)\n",
+    "    # print(total_features)\n",
+    "    # print(y)\n",
+    "    # print(X)\n",
+    "\n",
+    "    while True:\n",
+    "        remaining_features = list(set(total_features) - set(kept_features))\n",
+    "\n",
+    "        new_pval = pd.Series(index=remaining_features)\n",
+    "        \n",
+    "        for new_column in remaining_features:\n",
+    "            # print(X[kept_features + [new_column]])\n",
+    "            test_columns = list(set([new_column]) | set(kept_features))\n",
+    "            model = sm.OLS(y, sm.add_constant(X[test_columns])).fit(disp=0)\n",
+    "            new_pval[new_column] = model.pvalues[new_column]\n",
+    "        \n",
+    "        min_p_value = new_pval.min()\n",
+    "        if min_p_value < p_value:\n",
+    "            kept_features.append(new_pval.idxmin())\n",
+    "        else:\n",
+    "            break\n",
+    "    return kept_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 208,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def interactions(X, y, p_value, features):\n",
+    "    original_features = features\n",
+    "    combo_features = []\n",
+    "    for feature1, feature2 in combinations(original_features,2):\n",
+    "        # print(feature1, feature2)\n",
+    "        X[f\"{feature1}*{feature2}\"] = X[feature1] * X[feature2]\n",
+    "        combo_features.append(f\"{feature1}*{feature2}\")\n",
+    "    kept_features = []\n",
+    "    # print(y)\n",
+    "    print(X)\n",
+    "    while True:\n",
+    "        remaining_features = list(set(combo_features) - set(kept_features))\n",
+    "\n",
+    "        new_pval = pd.Series(index=remaining_features)\n",
+    "        \n",
+    "        for new_column in remaining_features:\n",
+    "            # print(X[kept_features + [new_column]])\n",
+    "            test_columns = list(set(original_features) | set([new_column]) | set(kept_features))\n",
+    "            model = sm.OLS(y, sm.add_constant(X[test_columns])).fit(disp=0)\n",
+    "            new_pval[new_column] = model.pvalues[new_column]\n",
+    "        \n",
+    "        min_p_value = new_pval.min()\n",
+    "        if min_p_value < p_value:\n",
+    "            kept_features.append(new_pval.idxmin())\n",
+    "        else:\n",
+    "            break\n",
+    "    return kept_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1 -1  1 ... -1 -1  1]\n",
+      "[[ 1 -1  1 -1]\n",
+      " [ 1  1 -1  1]\n",
+      " [ 1  1 -1  1]\n",
+      " ...\n",
+      " [-1 -1 -1 -1]\n",
+      " [ 1 -1  1  1]\n",
+      " [-1 -1 -1 -1]]\n",
+      "[0, 1, 2, 3]\n",
+      "[0, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "carlson = robjects.r['Carlson']\n",
+    "carlson_df = pandas2ri.rpy2py(carlson)\n",
+    "\n",
+    "carlson_df['newRecordF'] = np.where(carlson_df['newRecordF'] <= 3, -1, 1)\n",
+    "\n",
+    "carlson_df['promise'] = np.where(carlson_df['promise'] <= 2, -1, 1)\n",
+    "carlson_df['relevantdegree'] = np.where(carlson_df['relevantdegree'] <= 1, -1, 1)\n",
+    "carlson_df['coeth_voting'] = np.where(carlson_df['coeth_voting'] <= 1, -1, 1)\n",
+    "X = carlson_df.iloc[:,1:-2]\n",
+    "y = carlson_df.iloc[:,0].to_numpy() *2 -1\n",
+    "\n",
+    "# degree = 14\n",
+    "# pf = preprocessing.PolynomialFeatures(\n",
+    "#     degree=degree, interaction_only=True, include_bias=True,\n",
+    "# )\n",
+    "# print(X)\n",
+    "# T = pf.fit_transform(X)\n",
+    "X = X.to_numpy()\n",
+    "print(y)\n",
+    "print(X)\n",
+    "T_train, T_test, y_train, y_test = train_test_split(X, y, test_size=0.1)\n",
+    "T_train = pd.DataFrame(T_train)\n",
+    "y_train = pd.DataFrame(y_train)\n",
+    "# print(T_train)\n",
+    "kept_features = forward_selection(T_train,y_train,0.06)\n",
+    "print(kept_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0  1  2  3  0*2\n",
+      "0    -1  1 -1  1    1\n",
+      "1     1 -1 -1  1   -1\n",
+      "2     1  1 -1 -1   -1\n",
+      "3    -1  1 -1 -1    1\n",
+      "4    -1 -1 -1  1    1\n",
+      "...  .. .. .. ..  ...\n",
+      "2903 -1  1 -1  1    1\n",
+      "2904  1 -1 -1 -1   -1\n",
+      "2905 -1 -1 -1  1    1\n",
+      "2906 -1 -1  1  1   -1\n",
+      "2907 -1  1  1 -1   -1\n",
+      "\n",
+      "[2908 rows x 5 columns]\n",
+      "['0*2']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(interactions(T_train, y_train, 0.06, kept_features))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "promise\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in pf.get_feature_names_out()[kept_features]:\n",
+    "    print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
