--- a/lasso_factorial_selection/lasso_vs_forward.ipynb
+++ b/lasso_factorial_selection/lasso_vs_forward.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 212,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -19,12 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import itertools as it\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy.special import comb\n",
     "from factorial_model import FactorialModel\n",
     "from forward_selection import ForwardSelection"
    ]
@@ -38,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 557,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 558,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,30 +286,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 559,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]"
+       "array([1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 559,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fs.selected_indices"
+    "fs.selected"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
