--- a/lasso_factorial_selection/lasso_vs_forward.ipynb
+++ b/lasso_factorial_selection/lasso_vs_forward.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -28,13 +19,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import itertools as it\n",
     "import matplotlib.pyplot as plt\n",
+    "import statsmodels.api as sm\n",
     "from scipy.special import comb\n",
     "from factorial_model import FactorialModel\n",
     "from forward_selection import ForwardSelection"
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +71,7 @@
    ],
    "source": [
     "# Fit and evaluated Lasso model\n",
+    "fm_k4.sample_beta()\n",
     "fm_k4.sample_and_split_data()\n",
     "fm_k4.fit_lasso()\n",
     "fm_k4.predict()\n",
@@ -95,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +118,7 @@
    ],
    "source": [
     "# Fit and evaluated Lasso model\n",
-    "fm_k8.sample_and_split_data()\n",
+    "fm_k8.sample_beta()\n",
     "fm_k8.sample_and_split_data()\n",
     "fm_k8.fit_lasso()\n",
     "fm_k8.predict()\n",
@@ -142,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -172,6 +165,7 @@
    ],
    "source": [
     "# Fit and evaluated Lasso model\n",
+    "fm_k12.sample_beta()\n",
     "fm_k12.sample_and_split_data()\n",
     "fm_k12.fit_lasso()\n",
     "fm_k12.predict()\n",
@@ -193,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,6 +219,7 @@
     "    )\n",
     "\n",
     "    # Fit and evaluated Lasso model\n",
+    "    fm.sample_beta()\n",
     "    fm.sample_and_split_data()\n",
     "    fm.fit_lasso()\n",
     "    fm.predict()\n",
@@ -234,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 558,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,16 +281,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 559,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1])"
+       "array([1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0])"
       ]
      },
-     "execution_count": 559,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,6 +298,13 @@
    "source": [
     "fs.selected"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
